--- a/MalignantCommentsClassifier.ipynb
+++ b/MalignantCommentsClassifier.ipynb
@@ -6,13 +6,22 @@
       "name": "MalignantCommentsClassifier",
       "provenance": [],
       "collapsed_sections": [
+        "QrM1SKhvEORC",
+        "k5pnVarFERP3",
         "Jsa-DgqvEvi1",
         "OSYX3bzkE45r",
         "lN5dP5cpFDKa",
         "VHuLqQ4BF7X5",
-        "sDHCGTLBUv0T"
+        "TM3KFuTNGiE5",
+        "cf-mpTwdGxIh",
+        "9naH8-lEG3RF",
+        "X_5lAaMPHD05",
+        "79pmZJX4HK_R",
+        "G8XSZv3dQ2qF",
+        "sDHCGTLBUv0T",
+        "Arys5x-736O0"
       ],
-      "authorship_tag": "ABX9TyNYTH6tDnyRCdiOIA1MUYyN",
+      "authorship_tag": "ABX9TyM5wfrvFVUzN0/sO+wvEf9p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,7 +90,7 @@
         "from sklearn.model_selection import RandomizedSearchCV, train_test_split\n",
         "from sklearn.externals import joblib\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -95,7 +104,7 @@
         "import nltk\n",
         "from nltk.corpus import stopwords"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,7 +119,7 @@
       "source": [
         "nltk.download('stopwords')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,7 +160,7 @@
         "nltk.download('wordnet')\n",
         "nltk.download('punkt')"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,7 +197,7 @@
       "source": [
         "import sys"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10558,26 +10567,14 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "b4mZBYYCYbc-"
+        "id": "OoChRvV6PRIB"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "DqyKzUNpYbbC"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "Observations:\n",
+        "1. Since W2V is taking a lot of time and Colab gets disconnecting dropping the W2V model."
+      ]
     },
     {
       "cell_type": "markdown",
@@ -11363,7 +11360,7 @@
         "from sklearn.pipeline import Pipeline\n",
         "from sklearn.impute import SimpleImputer"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11386,7 +11383,7 @@
         "                                                 n_jobs=-1))\n",
         "])"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11398,7 +11395,7 @@
         "cleaned_lemmatized_train_dataset = pd.read_csv('/content/cleaned_lemmatized_train_data.csv')\n",
         "cleaned_lemmatized_test_dataset = pd.read_csv('/content/cleaned_lemmatized_test_data.csv')"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11413,7 +11410,7 @@
       "source": [
         "cleaned_lemmatized_test_dataset.columns"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11440,7 +11437,7 @@
         "       'abuse', 'loathe']]\n",
         "test_set = cleaned_lemmatized_test_dataset['lemmatized_clean_comment_text']"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11451,7 +11448,7 @@
       "source": [
         "train_set.fillna('',inplace=True)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11462,7 +11459,7 @@
       "source": [
         "test_set.fillna('',inplace=True)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11477,7 +11474,7 @@
       "source": [
         "malignant_comments_classifier_pipeline.fit(train_set, train_labels)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11532,7 +11529,7 @@
       "source": [
         "malignant_comments_predicitions_probabilities = malignant_comments_classifier_pipeline.predict_proba(test_set)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11543,7 +11540,7 @@
       "source": [
         "malignant_comments_predicitions_probabilities = pd.DataFrame(malignant_comments_predicitions_probabilities, columns=['malignant', 'highly_malignant', 'rude', 'threat','abuse', 'loathe'])"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11559,7 +11556,7 @@
       "source": [
         "malignant_comments_predicitions_probabilities"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11728,7 +11725,7 @@
       "source": [
         "malignant_comments_predicitions_probabilities.to_csv('/content/malignant_comments_prediction_probabilities.csv')"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11744,7 +11741,7 @@
         "import joblib\n",
         "joblib.dump(malignant_comments_classifier_pipeline,'/content/malignant_comments_classifier_pipeline.obj')"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
